fix: align the status badge to the end of span details column

--- a/frontend/src/container/TraceWaterfall/TraceWaterfallStates/Success/Success.styles.scss
+++ b/frontend/src/container/TraceWaterfall/TraceWaterfallStates/Success/Success.styles.scss
@@ -149,6 +149,11 @@
 					background-color: #0b0c0e;
 					height: 100%;
 					justify-content: center;
+					&:not(:first-child) {
+						.first-row {
+							width: calc(100% - 28px);
+						}
+					}
 
 					.first-row {
 						display: flex;
